margin fix
margin fix so that double digits aren't cut off when highlighted in list

--- a/web/style.css
+++ b/web/style.css
@@ -55,6 +55,9 @@ background-color:#F4F4F4;
 
 }
 
+#top20Lists{
+ margin-left: 10px;
+}
 .wordList li{
 	width:50px;
 }
